替换CMS 垃圾回收器为G1 GC